--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-spring": "^9.5.4"
   },
   "devDependencies": {
+    "@react-spring/types": "^9.5.4",
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
